[gd_scene load_steps=2 format=3 uid="uid://curwic0sq8nm8"]

[ext_resource type="Script" path="res://ver_1/character/enemy/boss/duo_dance.gd" id="1_2pyqf"]

[node name="DuoDance" type="Node2D"]
script = ExtResource("1_2pyqf")
p_dmg = 5.0
p_spd = 125.0

[node name="SideChangeTimer" type="Timer" parent="."]

[connection signal="timeout" from="SideChangeTimer" to="." method="_on_side_change_timer_timeout"]
